latest-est fixes including wizard overflowing and double quotes in excerpts

--- a/_includes/css/blog-list.css
+++ b/_includes/css/blog-list.css
@@ -203,12 +203,20 @@ a.keep-reading{
 @media (max-width: 767px){
     .blog-list__post__excerpt{
         text-align: justify;
-        padding: 0 1.6rem 0.5rem 1.4rem;
+        padding: 0 1rem 0.5rem 1rem;
     }
 
-    .blog-list__post__excerpt::before,
+    .blog-list__post__excerpt::before{
+        font-size: 2rem;
+        opacity: 0.4;
+        left: -0.2rem; 
+        top: -0.3rem;       
+    }
     .blog-list__post__excerpt::after{
-        font-size: 2.6rem;
+        font-size: 2rem;
+        opacity: 0.4;
+        right: -1rem;
+        bottom: -2.2rem;
     }
 
     .blog-list__post__footer{
