--- a/_includes/css/newsletter-wizard.css
+++ b/_includes/css/newsletter-wizard.css
@@ -221,7 +221,8 @@ a{
 
 input[name='rd_promo']{
     opacity: 0;
-    position: absolute;
+    height: 0;
+    width: 0;
 }
 
 .fancy-radio{
